# mono

./: CMakeLists.txt  Makefile.am  README.MK  configure.ac  configure.in
cmake/: ac-to-cmake.py  config.h.in  configure.cmake  defines-todo.cmake  options.cmake
data/gdb71/: mono-sgen-gdb.py
libgc/include/private/: gcconfig.h
m4/: mk.m4
mcs/: Makefile
mcs/class/: Makefile
mcs/class/Commons.Xml.Relaxng/: Makefile
mcs/class/Compat.ICSharpCode.SharpZipLib/: Makefile
mcs/class/Cscompmgd/: Makefile
mcs/class/CustomMarshalers/: Makefile
mcs/class/I18N/: Makefile
mcs/class/IBM.Data.DB2/: Makefile
mcs/class/ICSharpCode.SharpZipLib/: Makefile
mcs/class/Managed.Windows.Forms/: Makefile
mcs/class/Microsoft.Build.Engine/: Makefile
mcs/class/Microsoft.Build.Tasks/: Makefile
mcs/class/Microsoft.Build.Utilities/: Makefile
mcs/class/Microsoft.CSharp/: Makefile
mcs/class/Microsoft.VisualC/: Makefile
mcs/class/Mono.C5/: Makefile
mcs/class/Mono.CSharp/: Makefile
mcs/class/Mono.Cecil/: Makefile
mcs/class/Mono.Cecil.Mdb/: Makefile
mcs/class/Mono.CodeContracts/: Makefile
mcs/class/Mono.Data.Sqlite/: Makefile
mcs/class/Mono.Data.Tds/: Makefile
mcs/class/Mono.Debugger.Soft/: Makefile
mcs/class/Mono.Http/: Makefile
mcs/class/Mono.Management/: Makefile
mcs/class/Mono.Messaging/: Makefile
mcs/class/Mono.Messaging.RabbitMQ/: Makefile
mcs/class/Mono.Options/: Makefile
mcs/class/Mono.Parallel/: Makefile
mcs/class/Mono.Profiler.Log/: Makefile
mcs/class/Mono.Reflection.Emit.Save/: Makefile  Mono.Reflection.Emit.Save.dll.sources  RefEmitEmitter.cs
mcs/class/Mono.Simd/: Makefile
mcs/class/Moonlight.Build.Tasks/: Makefile
mcs/class/Novell.Directory.Ldap/: Makefile
mcs/class/Npgsql/: Makefile
mcs/class/PEAPI/: Makefile
mcs/class/System.ComponentModel.Composition/: Makefile
mcs/class/System.ComponentModel.DataAnnotations/: Makefile
mcs/class/System.Configuration.Install/: Makefile
mcs/class/System.Data.DataSetExtensions/: Makefile
mcs/class/System.Data.Linq/: Makefile
mcs/class/System.Data.OracleClient/: Makefile
mcs/class/System.Data.Services/: Makefile
mcs/class/System.Data.Services.Client/: Makefile
mcs/class/System.Design/: Makefile
mcs/class/System.DirectoryServices/: Makefile
mcs/class/System.Dynamic/: Makefile
mcs/class/System.IdentityModel/: Makefile
mcs/class/System.IdentityModel.Selectors/: Makefile
mcs/class/System.Interactive/: Makefile
mcs/class/System.Interactive.Async/: Makefile
mcs/class/System.Interactive.Providers/: Makefile
mcs/class/System.Json/: Makefile
mcs/class/System.Management/: Makefile
mcs/class/System.Messaging/: Makefile
mcs/class/System.Net/: Makefile
mcs/class/System.Numerics/: Makefile
mcs/class/System.Reactive.Core/: Makefile
mcs/class/System.Reactive.Debugger/: Makefile
mcs/class/System.Reactive.Experimental/: Makefile
mcs/class/System.Reactive.Interfaces/: Makefile
mcs/class/System.Reactive.Linq/: Makefile
mcs/class/System.Reactive.Observable.Aliases/: Makefile
mcs/class/System.Reactive.PlatformServices/: Makefile
mcs/class/System.Reactive.Providers/: Makefile
mcs/class/System.Reactive.Runtime.Remoting/: Makefile
mcs/class/System.Reactive.Windows.Forms/: Makefile
mcs/class/System.Reactive.Windows.Threading/: Makefile
mcs/class/System.Runtime.Caching/: Makefile
mcs/class/System.Runtime.DurableInstancing/: Makefile
mcs/class/System.Runtime.Remoting/: Makefile
mcs/class/System.Runtime.Serialization/: Makefile
mcs/class/System.Runtime.Serialization.Formatters.Soap/: Makefile
mcs/docs/: NINJA.md
mcs/tools/: Makefile
mk/: pre.mk  rules.mk
mono/: CMakeLists.txt  Makefile.am
mono/btls/: btls-util.h  btls-x509.c
mono/cil/: tables.def
mono/io-layer/: event-private.h  events.c  handles-private.h  handles.c  io-private.h  io.c  mono-mutex.c  mutex-private.h  mutexes.c  posix.c  processes.c  semaphore-private.h  semaphores.c  socket-private.h  sockets.c  thread-private.h  wait.c  wapi-private.h  wthreads.c
mono/metadata/: Makefile.am  abi-details.h  appdomain.c  assembly.c  blob.h  boehm-gc.c  class-internals.h  class.c  cominterop.c  cominterop.h  custom-attrs.c  debug-mono-ppdb.c  domain-internals.h  domain.c  dynamic-image.c  file-io.c  gc-internal.h  gc-internals.h  icall-decl.h  icall-def.h  icall.c  image.c  loader.c  marshal-ilgen.c  marshal.c  marshal.h  metadata-internals.h  metadata.c  null-gc.c  object-internals.h  object-offsets.h  object.c  row-indexes.h  sgen-archdep.h  sgen-client-mono.h  sgen-gc.c  sgen-mono.c  sgen-stw.c  sre-internals.h  sre-save.c  (+5 more)
mono/mini/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.am.in  aot-compiler.c  aot-compiler.h  aot-runtime.c  basic-vectors.cs  branch-opts.c  cpu-amd64.md  cpu-amd64.td  cpu-arm.md  cpu-desc.td  cpu-mips.md  cpu-x86.md  debugger-agent.c  debugger-agent.h  declsec.c  driver.c  ee.h  exceptions-amd64.c  exceptions-arm.c  exceptions-arm64.c  exceptions-mips.c  exceptions-x86.c  exceptions.cs  gen-version-h.sh  gen.py  generics.cs  genmdesc.c  genmdesc.py  gshared.cs  helpers.c  iltests.il.in  interp-ops.c  interp-ops.h  interp-stubs.c  interp.c  interp.h  intrinsics.c  (+54 more)
mono/mini/interp/: interp-internals.h  interp.c  interp.h  mintops.def  transform.c
mono/profiler/: Makefile.am  gchandle-profiler.c  gchandle-profiler.h
mono/sgen/: gc-internal-agnostic.h  sgen-gchandles.c
mono/tablegen/: .gitignore  Makefile.am  README.md  tablegen.py  tests.py
mono/tests/: Makefile.am  weak-fields.cs
mono/utils/: Makefile.am  mach-support-x86.c  mono-compiler.h  mono-context.c  mono-context.h  mono-dl.h  mono-membar.h  mono-sigcontext.h  mono-stack-unwinding.h  mono-threads-mach.c  mono-threads.c  mono-threads.h
msvc/: mono.sln
scripts/: Makefile.am
scripts/ci/: run-jenkins.sh
sdks/: configure
sdks/builds/: Makefile  wasm.mk
sdks/ios/: Makefile  README.md
sdks/wasm/: Makefile  driver.c  packager.cs  pinvoke-tables-default-netcore.h  runtime-tests.js  xunit-exclusions.rsp  xunit-main.cs
sdks/wasm/src/: driver.c  (+1 more)
tools/offsets-tool/: MonoAotOffsetsDumper.cs
(+92 files in other folders)
